Load balance across CONTRIBUTING/README
Lower friction some more (submit PR first, ask questions later!)